# corpus-website

./: .gitignore  README.md  pyproject.toml
docs/: how-does-it-work.excalidraw
src/corpus_website/app/: app.py
src/corpus_website/engine/: engine.py
src/corpus_website/models/: __init__.py  aesthetic_paradigm.py  aesthetic_pattern.py  author.py  country.py  criticized_theme.py  document.py  interpretation.py  job.py  medium.py  publication.py  register.py  source.py  theme.py  thumbnail.py  title.py
src/corpus_website/server/: server.py
src/corpus_website/store/: store.py
tests/: .~lock.corpus.xlsx#  corpus.xlsx  test_engine.py  test_store.py  test_xlsx_capabilities.py
tests/theme/: index.html.j2
theme/: about.html.j2  index.html.j2  index.html.j2_old  style.css
