[project]
name = "corpus-website"
version = "0.1.0"
description = "Tooling to expose the corpus as a website"
authors = [
    {name = "Adrien", email = "adrien@rouage.xyz"},
]
dependencies = [
    "openpyxl>=3.1.2",
    "openpyxl-image-loader>=1.0.5",
    "click>=8.1.6",
    "pendulum>=2.1.2",
    "jinja2>=3.1.2",
    "dateparser>=1.1.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "faker>=19.3.0",
]

[tool.pdm.scripts]
test = "pytest"

[project.scripts]
corpus-website = "corpus_website:app"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
    "tests",
]